// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageTemplate_Deprecated fullHeight is rendered with noscroll 1`] = `
<div
  class="euiPage euiPageTemplate eui-fullHeight emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody eui-fullHeight emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone eui-yScroll emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default eui-fullHeight"
      >
        <div
          class="euiFlexGroup eui-fullHeight emotion-euiFlexGroup-none-flexStart-stretch-column"
        >
          <div
            class="euiFlexItem eui-fullHeight emotion-euiFlexItem-grow-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated fullHeight is rendered with true 1`] = `
<div
  class="euiPage euiPageTemplate eui-fullHeight emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody eui-fullHeight emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone eui-yScroll emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default eui-fullHeight"
      >
        <div
          class="euiFlexGroup eui-fullHeight emotion-euiFlexGroup-none-flexStart-stretch-column"
        >
          <div
            class="euiFlexItem eui-yScroll emotion-euiFlexItem-grow-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPageTemplate testClass1 testClass2 emotion-euiPage-row-grow-euiTestCss"
  data-test-subj="test subject string"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated restrict width can be set to a custom number 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-custom"
        style="max-width: 1024px;"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated restrict width can be turned off 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-restrictWidth-euiTestCss"
    data-test-subj="test subject string"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPageContentBody--restrictWidth-default testClass1 testClass2 emotion-euiTestCss"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2 emotion-euiPanel-grow-m-l-plain-hasShadow-euiTestCss"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-euiTestCss"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 40vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px; max-height: 100vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPageBody emotion-euiPageBody"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredBody with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2 emotion-euiTestCss"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiTestCss"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPageContentBody--restrictWidth-default testClass1 testClass2 emotion-euiTestCss"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2 emotion-euiPanel-grow-m-l-subdued-euiTestCss"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-l-border-euiTestCss"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-l"
        style="max-width: 1200px;"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 40vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px; max-height: 100vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display: flex;"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageBody emotion-euiPanel-grow-none-l-plain-hasShadow-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template centeredContent with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2 emotion-euiTestCss"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageBody emotion-euiPanel-grow-none-l-plain-hasShadow-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiTestCss"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default testClass1 testClass2 emotion-euiTestCss"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2 emotion-euiPanel-grow-none-plain-euiTestCss"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-l-border-euiTestCss"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-l"
        style="max-width: 1200px;"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 40vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px; max-height: 100vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody"
  >
    <div
      class="euiPageBody emotion-euiPageBody-l"
    >
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template default with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2 emotion-euiTestCss"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody"
  >
    <div
      class="euiPageBody emotion-euiPageBody-l"
    >
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-restrictWidth-euiTestCss"
    data-test-subj="test subject string"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody testClass1 testClass2 emotion-euiTestCss"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2 emotion-euiPanel-grow-none-transparent-euiTestCss"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-euiTestCss"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 40vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l"
  style="min-height: 460px; max-height: 100vh;"
>
  <div
    class="euiPageBody emotion-euiPageBody-restrictWidth"
    style="max-width: 1200px;"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated template empty with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2 emotion-euiTestCss"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate_Deprecated with bottomBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow"
  style="min-height: 460px;"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--sticky emotion-euiBottomBar-sticky-euiColorMode-dark-colorClassName"
      style="left: 0px; right: 0px; bottom: 0px;"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      >
        Bottom Bar
      </div>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</div>
`;
